--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,14 @@ dependencies {
     implementation 'org.jetbrains:annotations:15.0'
 
     //implementing the Meow-bottom Navigation lib
-    implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
+    //implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
+    implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
 
     implementation 'com.github.fornewid:neumorphism:0.3.0'
 
-    // IZI mbili yulu njo nili ongeza
+    // Rounded image
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
 
