--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ android {
 dependencies {
 
     implementation fileTree(dir: "libs", includes: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
 
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
@@ -57,6 +59,8 @@ dependencies {
     //sizing
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.1'
 
     testImplementation 'junit:junit:4.13.2'
 
